datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

enum Role {
  USER
  STAFF
  ADMIN
  SUPERUSER
}

enum Permission {
  appALL
  groupCREATE
  groupREAD
  groupUPDATE
  groupDELETE
  groupALL
  userCREATE
  userREAD
  userUPDATE
  userDELETE
  userALL
  contactMessageCREATE
  contactMessageREAD
  contactMessageUPDATE
  contactMessageDELETE
  contactMessageALL
}

model Group {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @default(now())
  name      String   @unique
  isActive  Boolean  @default(false)
  User      User[]
}

model User {
  id             String       @id @default(cuid())
  createdAt      DateTime     @default(now())
  updatedAt      DateTime     @updatedAt
  lastLoginAt    DateTime
  email          String       @unique @db.VarChar(255)
  username       String       @unique @db.VarChar(255)
  password       String       @default(cuid())
  sessionVersion Int          @default(1)
  isVerified     Boolean      @default(false)
  isActive       Boolean      @default(false)
  firstName      String       @default("") @db.VarChar(255)
  lastName       String       @default("") @db.VarChar(255)
  language       String       @default("en") @db.VarChar(255)
  role           Role         @default(USER)
  groups         Group[]
  permissions    Permission[]
}

model ContactMessage {
  id          String   @id @default(cuid())
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  email       String   @db.VarChar(255)
  subject     String   @db.VarChar(255)
  content     String
  countryCode String   @db.VarChar(10)
  ipAddress   String   @db.VarChar(100)
  language    String   @default("en")
}
